<resources>
    <string name="app_name">Сумеречный компаньон</string>
    <string name="app_name_version">Сумеречный компаньон v0.7471</string>
    <string name="action_settings">Settings</string>
    <string name="gps_disable">GPS недоступен.</string>
    <string name="net_disable">Координаты сети недоступны.</string>
    <string name="new_login">Логин</string>
    <string name="new_password">Пароль</string>
    <string name="enterToNewZone">Вы вошли в новую зону.</string>
    <string name="new_server">Адрес сервера и его порт</string>
    <string name="new_zone_name">Название новой зоны.</string>
    <string name="new_zone_textforhuman">Текст для людей.</string>
    <string name="new_zone_textforlight">Текст для светлых.</string>
    <string name="new_zone_textfordark">Текст для темных.</string>
    <string name="new_zone_latitude">Широта.</string>
    <string name="new_zone_longitude">Долгота.</string>
    <string name="new_zone_priority">Приоритет зоны.</string>
    <string name="new_zone_achievement">Ачивка.</string>
    <string name="new_zone_radius">Радиус зоны в метрах.</string>
    <string name="new_search_name">Имя для поиска</string>
    <string name="searchUserLastConnected">Информация обновлена - \u0020</string>
    <string name="serverNotResponse">Не удается соединиться с сервером.</string>
    <string name="new_zone_system">0 для обычных зон, 1 для типов проклятий и свободной зоны.</string>
    <string name="new_curse_user_name">Цель заклинания</string>
    <string name="new_curse_curse_name">Название заклинания</string>
    <string name="addUserSetName">Имя пользователя.</string>
    <string name="addUserPassword">Пароль.</string>
    <string name="addUserPowerSide">Сторона силы(1-светлый,2-темный,0-человек)</string>
    <string name="addUserIsSuperuser">Полномочия(9-мастерские,0-человек)</string>
    <string name="deleteEnterZoneName">Введите имя зоны для удаления.</string>
    <string name="youDie">Вы действительно умерли?</string>
    <string name="castSearch">Заклинание поиска.</string>
    <string name="make1curse">Наложить проклятие 1ого уровня.</string>
    <string name="castEnchant">Наложение чар.</string>
    <string name="new_zone_observable">Наблюдать за зоной?</string>
    <string name="searchUserCurse">Проклятия на игроке - \u0020</string>
    <string name="vampireSendAlready">Вы зовете \u0020</string>
    <string name="vampireSendNoYet">Пока вы никого не зовете</string>
    <string name="newVampireCall">На вас действует вампирский зов!</string>
    <string name="vampireCallFrom">Вампирский зов от \u0020</string>
    <string name="serverBaseCantAccess">Сервер поврежден - нет доступа к базам.</string>
    <string name="addNewZoneCorrect">Зона добавлена корректно.</string>
    <string name="updateNewZoneCorrect">Зона обновлена корректно.</string>
    <string name="deleteNewZoneCorrect">Зона удалена корректно.</string>
    <string name="exitYesNo">Вы уверены, что хотите выйти? Ваши координаты перестанут отслеживаться, для других игроков вы будете вне игры.</string>
    <string name="sensorOpen">Для нормальной работы приложения нужно включить датчики геопозиционирования. Если у вас небольшая батарея у устройства - выберете \"Режим - Экономия заряда\". Включить датчики?</string>
    <string name="twilightWatchYou">Сумрак наблюдает за вами.</string>
    <string name="No">нет</string>
    <string name="damageSQLUser">Повреждена или недоступна таблица User</string>
    <string name="damageSQLZone">Повреждена или недоступна таблица Zones</string>
    <string name="damageSQLLogs">Повреждена или недоступна таблица Logs</string>
    <string name="damageSQLMail">Повреждена или недоступна таблица Mail</string>
    <string name="wrongLoginPass">Неверный логин или пароль</string>
    <string name="dismissVampireCall">С вас снят вампирский зов</string>
    <string name="wrongClientVersion">Ваша версия клиента устарела, необходимо обновление.</string>
    <string name="newVersion">v0.724 от 31.01\n1. Значок галочки больше не пропадает при обновлении состояния.\n2. Вампирский зов и новая зона - это теперь разные уведомления.\n3. Проверка версии клиента на сервере.\n4.Разные звуки для разных уведомлений</string>
    <string name="new_vampiresend_name">На кого накладываем зов</string>
    <string name="zonesNotFound">Указанная зона не найдена</string>
    <string name="playerAddCorrect">Игрок был добавлен корректно</string>
    <string name="playerAlreadyAdded">Указанный игрок уже существует</string>
    <string name="playerDieCorrect">Игрок умер корректно</string>
    <string name="curseClear">Проклятие снято</string>
    <string name="curseMorePower">На игрока действует проклятие большей или той же силы</string>
    <string name="playerNotCurse">Игрок не проклят</string>
    <string name="vampireCallClear">Зов снят</string>
    <string name="vampireCallNotCall">На игрока не воздействуют зовом</string>
    <string name="castProtectOk">Защита от обнаружения наложена</string>
    <string name="curseCastOk">Заклинание успешно произнесено</string>
    <string name="playerOrCastNotFound">Игрок или заклинание не найдено</string>
    <string name="vampireCallAlreadyCall">Игрок уже под действием зова</string>
    <string name="vampireCallCastOk">Зов наложен успешно</string>
    <string name="playerNotFound">Игрок не найден</string>
    <string name="vampireCallOnlyOne">Зов можно использовать только на одном игроке</string>
    <string name="vampireCallClearOk">Зов успешно снят</string>
    <string name="playerHided">Игрок вне зоны обнаружения или под воздействием защиты от сканирования</string>
    <string name="noFreeZoneError">Ошибка базы данных - повреждена свободная зона</string>


    <string-array name="scanUserSpinner">
        <item>Сканирование уровень 1</item>
        <item>Сканирование уровень 2</item>
        <item>Сканирование уровень 3</item>
    </string-array>
    <string-array name="searchUserSpinner">
        <item>Заклинание \"Поиск уровень 1\"</item>
        <item>Заклинание \"Поиск уровень 2\"</item>
        <item>Заклинание \"Поиск уровень 3\"</item>
        <item>Заклинание \"Поиск уровень Мастер\"</item>
    </string-array>
</resources>
