<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.shi.dayre.twilightclient2.MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:orientation="vertical">

        <EditText
            android:id="@+id/newServer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_server"
            android:singleLine="true" />

        <EditText
            android:id="@+id/newLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_login"
            android:singleLine="true" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:singleLine="true" />

        <TextView
            android:id="@+id/gpsCoordinate"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:gravity="left"
            android:maxLines="1" />

        <TextView
            android:id="@+id/netCoordinate"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:gravity="left"
            android:maxLines="1" />

        <TextView
            android:id="@+id/textFromServer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:gravity="left"
            android:maxLines="1"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/superuserbar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top|left"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <LinearLayout
                android:id="@+id/superuserbuttonbar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:orientation="horizontal"
                >


                <ImageButton
                    android:id="@+id/searchAllButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:gravity="left"
                    android:src="@drawable/map"
                    android:background="@color/colorMainBackground"
                   />
                <ImageButton
                    android:id="@+id/addNewZoneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:gravity="left"
                    android:src="@drawable/addzone"
                    android:background="@color/colorMainBackground" />

                <ImageButton
                    android:id="@+id/deleteZoneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:gravity="left"
                    android:src="@drawable/removezone"
                    android:background="@color/colorMainBackground" />
                <ImageButton
                    android:id="@+id/addUserButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:gravity="left"
                    android:src="@drawable/adduser"
                    android:background="@color/colorMainBackground" />

                <ImageButton
                    android:id="@+id/addCurseButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:gravity="left"
                    android:src="@drawable/curse"
                    android:background="@color/colorMainBackground" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/searchbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:orientation="vertical"
                android:visibility="gone"
                >
                <EditText
                    android:id="@+id/searchName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_search_name"
                    android:singleLine="true"
                    android:textSize="@dimen/editable_font"
                    android:text=""/>
                <TextView
                    android:id="@+id/searchLastconnect"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textSize="@dimen/editable_font"/>
                <LinearLayout
                    android:id="@+id/mapbar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:orientation="vertical"
                    >
                    <fragment
                        android:id="@+id/searchmap"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >
                    </fragment>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/adduserbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:orientation="vertical"
                android:visibility="gone"
                >
                <EditText
                    android:id="@+id/addUserName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addUserSetName"
                    android:singleLine="true"
                    android:textSize="@dimen/editable_font"
                    android:text=""/>
                <EditText
                    android:id="@+id/addUserPass"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addUserPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/editable_font"
                    android:text=""/>
                <EditText
                    android:id="@+id/addUserPowerside"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addUserPowerSide"
                    android:singleLine="true"
                    android:inputType="number"
                    android:textSize="@dimen/editable_font"
                    android:text=""/>
                <EditText
                    android:id="@+id/addUserSuperuser"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addUserIsSuperuser"
                    android:singleLine="true"
                    android:inputType="number"
                    android:textSize="@dimen/editable_font"
                    android:text=""/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/deletezonebar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:orientation="vertical"
                android:visibility="gone"
                >
                <EditText
                    android:id="@+id/deleteZoneName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/deleteEnterZoneName"
                    android:singleLine="true"
                    android:textSize="@dimen/editable_font"
                    android:text=""/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cursebar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:orientation="vertical"
                android:visibility="gone"
                >
                <EditText
                    android:id="@+id/curseUserName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_curse_user_name"
                    android:singleLine="true"
                    android:textSize="@dimen/editable_font"
                    android:text=""/>
                <EditText
                    android:id="@+id/curseCurseName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_curse_curse_name"
                    android:singleLine="true"
                    android:textSize="@dimen/editable_font"
                    android:text=""/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/addnewzonebar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:orientation="vertical"
                android:visibility="gone"
                >
                <EditText
                    android:id="@+id/newZoneName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_zone_name"
                    android:singleLine="true"
                    android:textSize="@dimen/editable_font"/>
                <EditText
                    android:id="@+id/newZoneTextForHuman"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_zone_textforhuman"
                    android:singleLine="true"
                    android:textSize="@dimen/editable_font"/>
                <EditText
                    android:id="@+id/newZoneTextForLight"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_zone_textforlight"
                    android:singleLine="true"
                    android:textSize="@dimen/editable_font"/>
                <EditText
                    android:id="@+id/newZoneTextForDark"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_zone_textfordark"
                    android:singleLine="true"
                    android:textSize="@dimen/editable_font"/>
                <EditText
                    android:id="@+id/newZoneLatitude"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_zone_latitude"
                    android:singleLine="true"
                    android:textSize="@dimen/editable_font"
                    android:inputType="number"/>
                <EditText
                    android:id="@+id/newZoneLongitude"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_zone_longitude"
                    android:singleLine="true"
                    android:textSize="@dimen/editable_font"
                    android:inputType="number"/>
                <EditText
                    android:id="@+id/newZoneRadius"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_zone_radius"
                    android:singleLine="true"
                    android:textSize="@dimen/editable_font"
                    android:inputType="number"/>
                <EditText
                    android:id="@+id/newZonePriority"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_zone_priority"
                    android:singleLine="true"
                    android:textSize="@dimen/editable_font"
                    android:inputType="number"/>
                <EditText
                    android:id="@+id/newZoneAchievement"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_zone_achievement"
                    android:singleLine="true"
                    android:textSize="@dimen/editable_font"/>
                <EditText
                    android:id="@+id/newZoneSystem"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_zone_system"
                    android:singleLine="true"
                    android:textSize="@dimen/editable_font"
                    android:inputType="number"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/currentStatus"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:gravity="left"
            android:maxLines="20"
            android:textSize="32dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
